--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-elevenlabs==0.2.26
-python-dotenv==1.0.0
-moviepy==1.0.3
-python-ffmpeg>=2.0.0
+google-auth-oauthlib>=0.4.6
+google-auth-httplib2>=0.1.0
+google-api-python-client>=2.0.0
+moviepy>=1.0.3
+openai>=0.27.0
+python-dotenv>=0.19.0
 ffmpeg-python>=0.2.0
