Update project with TikTok integration, Docker support, and improved .gitignore

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,14 @@
 # OpenAI API Key for script generation
-OPENAI_API_KEY="your-openai-api-key-here"
+OPENAI_API_KEY=your_openai_api_key_here
 
 # ElevenLabs API Key for text-to-speech conversion
-ELEVEN_LABS_API_KEY="your-elevenlabs-api-key-here" 
+ELEVEN_LABS_API_KEY="your-elevenlabs-api-key-here"
+
+# Google Drive Folder ID
+GOOGLE_DRIVE_FOLDER_ID=your_google_drive_folder_id_here
+
+# Google Drive Credentials Path
+GOOGLE_DRIVE_CREDENTIALS_PATH=path_to_your_credentials_json
+
+# ZAPCAP API Key
+ZAPCAP_API_KEY=your_zapcap_api_key_here 
